--- a/Discografia.html
+++ b/Discografia.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Mikrokosmos</title>
@@ -51,142 +47,233 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Discografia Completa</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Discografia</h1>
+								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/1.jpg" alt="" />
+										<img src="images/album-cover1.jpg" alt="" />
 									</span>
-									<a href="Nam.html">
-										<h2>Kim NamJoom</h2>
+									<a href="https://open.spotify.com/album/6egaEe9JaULuUCkihSnYlH?si=cRl5MBQ4QpOc7OJSwVzZdg" target="_blank">
+										<h2>2 COOL 4 SKOOL</h2>
 										<div class="content">
-											<p>El Lider.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/2.jpg" alt="" />
-									</span>
-									<a href="Jin.html">
-										<h2>Kim Seokjin</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/3.jpg" alt="" />
-									</span>
-									<a href="Yoongi.html">
-										<h2>Min Yoongi</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/4.jpg" alt="" />
-									</span>
-									<a href="Hobi.html">
-										<h2>Jung Hoseok</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/5.jpg" alt="" />
-									</span>
-									<a href="Jimin.html">
-										<h2>Park Jimin</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/6.jpg" alt="" />
-									</span>
-									<a href="Tae.html">
-										<h2>Kim Taehyung</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style7">
-									<span class="image">
-										<img src="images/7.jpg" alt="" />
-									</span>
-									<a href="Jk.html">
-										<h2>Jeon Jungkook</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/bts.png" alt="" />
-									</span>
-									<a href="BTS.html">
-										<h2>BTS</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>THE 1ST SINGLE ALBUM</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/album-cover2.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
+									<a href="https://open.spotify.com/album/6rWmdSJIaGTVtdMJQ35Lvf?si=KGcFiNVfSQuPEkd60sMpBg" target="_blank">
+										<h2>O!RUL8,2?</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>THE 1ST MINI ALBUM.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/album-cover3.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
+									<a href="https://open.spotify.com/album/5r35iS0uSSoQBKzQj0IeI3?si=HR4pEDVYT-SbUEl_gDJwpAl" target="_blank">
+										<h2>SKOOL LUV AFFAIR</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>THE 2ND MINI ALBUM.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
+										<img src="images/album-cover4.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
+									<a href="https://open.spotify.com/album/35voVqYGkotyJ945O9egDY?si=rUhkTRZuTd29t6Dfu-4gGQ" target="_blank">
+										<h2>DARK & WILD</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>1ST FULL-LENGHTH ALBUM</p>
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
+										<img src="images/album-cover5.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
+									<a href="https://open.spotify.com/album/0mEeCuKJQ8Xh9tQ5dMm89X?si=6EUkzbIdRL23XJRKm8p1wQ" target="_blank">
+										<h2>화양연화 pt.1</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>THE 3RD MINI ALBUM</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover6.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/2ds8iT4wkaN1Q1gZe1qcOD?si=xflrqI5CRzulxf6dFNNnMw" target="_blank">
+										<h2>화양연화 pt.2</h2>
+										<div class="content">
+											<p>THE 4TH MINI ALBUM.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover7.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/1k5bJ8l5oL5xxVBVHjil09?si=Usd_YMzlTeOIsxlXs-8VVA" target="_blank">
+										<h2>화양연화 YOUNG FOREVER</h2>
+										<div class="content">
+											<p>S1ST SPECIAL ALBUM.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover8.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/1vhNGBTFoaSTLbHjPGFIlF?si=OSq6-iA0TWG1kkxLBosbEg" target="_blank">
+										<h2>WINGS</h2>
+										<div class="content">
+											<p>2ND FULL-LENGTH ALBUM.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover9.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/6THpewjqJ15ORBJkh5CEYb?si=rBRKlPibSQSOZbZD2TW75w" target="_blank">
+										<h2>YOU NEVER WALK ALONE</h2>
+										<div class="content">
+											<p>2ND SPECIAL ALBUM.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover10.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/07Rq17GzCnIdWJcyVHb57G?si=lY7p5TdTRQmAwKX7xtCvLw" target="_blank">
+										<h2>LOVE YOURSELF承
+											‘HER’</h2>
+										<div class="content">
+											<p>THE 5TH MINI ALBUM.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover11.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/4NIqCxqP9o8Tp6tGLBqd8O?si=szguswY0QeS2osvTHLBOOAl" target="_blank">
+										<h2>LOVE YOURSELF轉
+											‘TEAR’</h2>
+										<div class="content">
+											<p>3RD FULL-LENGTH ALBUM.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover12.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/43wFM1HquliY3iwKWzPN4y?si=U4bQEcPrQguhM3GSJzOCewl" target="_blank">
+										<h2>LOVE YOURSELF結
+											‘ANSWER’</h2>
+										<div class="content">
+											<p>REPACKAGE ALBUM.</p>
 										</div>
 									</a>
 								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover13.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/2KqlAl1Kl5fZvbFgJ0qFB6?si=cVRKyl5GTOO2NQwol01xeA" target="_blank">
+										<h2>MAP OF THE SOUL : PERSONA</h2>
+										<div class="content">
+											<p>THE 6TH MINI ALBUM.</p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover14.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/5W1XY5ucNATjTULERvXx9j?si=6gWOY69YSQmch17OPzbJ_g" target="_blank">
+										<h2>MAP OF THE SOUL : 7</h2>
+										<div class="content">
+											<p>4TH FULL-LENGTH ALBUM.</p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover15.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/track/72wqLtMtkrB0qUw6jSqM0Z?si=c94d29e018204498" target="_blank">
+										<h2>DYNAMITE</h2>
+										<div class="content">
+											<p>DIGITAL SINGLE.</p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover16.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/6nYfHQnvkvOTNHnOhDT3sr?si=wSPuwGKPR6yXzWc5NVRVJA" target="_blank">
+										<h2>BE</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover17.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/0PBQ3Cp6NG8WX0G9KQVNMP?si=GMEe12SbR9OrNP3bDUB2yA" target="_blank">
+										<h2>BUTTER</h2>
+										<div class="content">
+											<p>DIGITAL SINGLE.</p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover18.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/0E4HPJE6DPIc2OUmJ8rTP0?si=cWuczK1tQpGrnw9JfIv2lw" target="_blank">
+										<h2>BUTTER/ PERMISO TO DANCE</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover19.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/6al2VdKbb6FIz9d7lU7WRB?si=ypb7YE88TcCfSzYHBe_QMw" target="_blank">
+										<h2>PROOF</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article> 
+								<article class="style1">
+									<span class="image">
+										<img src="images/album-cover20.png" alt="" />
+									</span>
+									<a href="https://open.spotify.com/track/5IAESfJjmOYu7cHyX557kz?si=bc76345c30754e5b" target="_blank">
+										<h2>TAKE TWO</h2>
+										<div class="content">
+											<p>DIGITAL SINGLE</p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
@@ -194,25 +281,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
+							
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -227,7 +296,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser </li>
 							</ul>
 						</div>
 					</footer>
