--- a/Jin.html
+++ b/Jin.html
@@ -52,16 +52,20 @@
 						<div class="inner">
 							<h1>Kim Seokjin</h1>
 							<span class="image main"><img src="images/jinpage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Jin (김석진 / Kim Seokjin) es un miembro de BTS, es un sub-vocalista, actor que ingresó a Big Hit luego de que un miembro de la agencia contactara con él y audicionará. Jin es el mayor de el grupo y es uno de los miembros que mas tiempo lleva dentro.</p>
+							<p>Kim Seokjin, antes de unirse a BTS se encontró con un agente de SM Entertainment que le ofreció presentarse a audicionar, sin embargo el pensó que era una estafa.
+
+								Jin estudiaba teatro en la universidad, es por esto que al audicionar para Big Hit Entertainment, este lo hizo para ser actor, no cantante, sin embargo demostró buenas habilidades para el canto, uniéndose en 2012 a la agencia.</p>
+							<p>Dentro de su carrera como idol en BTS, Jin ha demostrado ser una persona tranquila, que no provoca disturbios ni tampoco hace cosas con malas intenciones, es mas, según RM, Jin le hizo ver la vida desde otro punto, ya que el siempre vivía su vida de manera animada, pero jin le hizo entender que vivir tranquilo no significa vivir mal.
+
+								Por otro lado, Jin demuestra mucho cariño hacia sus compañeros, aunque constantemente se le compara con el Maknae (Miembro mas joven) del grupo, debido a que siempre bromea con los demás, también se le ha visto en su semblante serio.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -79,7 +83,7 @@
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +98,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
