--- a/Tae.html
+++ b/Tae.html
@@ -52,34 +52,17 @@
 						<div class="inner">
 							<h1>Kim Taehyung</h1>
 							<span class="image main"><img src="images/taepage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>V (김태형 / Kim Taehyung) Es el último miembro en ser revelado de BTS, apareció por primera vez en un Log junto a Jin en el canal BANGTANTV y en su Blog oficial, su característica principal dentro del grupo es su amplio rango vocal, permitiéndole llegar a tonos variados dependiendo de la canción.</p>
+							<p>V antes de unirse al grupo, aprendió como tocar el saxofón, aunque no haya pulido sus habilidades con el tiempo, lo demostró en un programa coreano luego de 4 años sin tocar.
+
+								Se incorporó a Big Hit tras pasar la audición en 2011. Fue el único en ser aceptado en su región (Daegu), en su audición se supo que cantó, rapeó, bailó e incluso hizo algunas imitaciones.</p>
+							<p>Taehyung es una persona con una personalidad cálida, alegre y positiva. Suele hacer amigos con facilidad ya que es muy abierto con todo el mundo. No le gusta llorar en público, pues no le gusta que la gente se ponga triste al verlo llorar. Es una persona muy familiar, siempre cuidará de su familia y amigos.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +77,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser </li>
 							</ul>
 						</div>
 					</footer>
