--- a/Yoongi.html
+++ b/Yoongi.html
@@ -52,16 +52,16 @@
 						<div class="inner">
 							<h1>Min Yoongi</h1>
 							<span class="image main"><img src="images/yoongipage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Suga (민윤기 / Min Yoongi) es uno de los miembros más antiguos de BTS, además de ser uno de los mayores. Es el rapero principal y se caracteriza por su habilidad de rapero rápido.</p>
+							<p>uga, antes de entrar a BTS jugaba baloncesto, destacándose debido a su flexibilidad, además de aprender a tocar el piano nunca dejó su pasión por escribir letras, lo que le llevaba a venderlas por dinero para su familia. Fue mientras escuchaba a un grupo coreano que pensó en ser rapero, y su ambición lo llevó a presentarse a HIT IT AUDITION, quedando en 2do lugar y entrando a BTS, aunque no estuvo de acuerdo con el concepto de los idols, lo hizo con el fin de poder producir sus propias canciones, y debutó con el resto del grupo en 2013.</p>
+							<p>Min Yoon Gi es reconocido dentro del grupo, por si mismo y por sus fans como una persona fría y ambiciosa, que gusta de la tranquilidad y de vivir la vida según su punto de vista. Aunque los miembros han explicado que por dentro es una persona amable que cuida de los demás miembros a su manera.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -79,7 +79,7 @@
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +94,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
