--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="BTS.html">Su Historia</a></li>
 							<li><a href="Discografia.html">Discografia BTS</a></li>
-							<li><a href="generic.html">Discografia Solistas</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
+							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -63,7 +63,9 @@
 									<a href="Nam.html">
 										<h2>Kim NamJoom</h2>
 										<div class="content">
-											<p>El Lider.</p>
+											<p>“Cuentame tu historia. Quiero escuchar tu voz y tu convicción. No importa quién eres, de dónde vienes, tu color de piel, tu identidad de género: Speak Yourself” 
+												
+												-Nam</p>
 										</div>
 									</a>
 								</article>
@@ -74,7 +76,9 @@
 									<a href="Jin.html">
 										<h2>Kim Seokjin</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>“Puedo ver a otros, pero no a mí mismo si he crecido a partir de toda esta experiencia, eso es porque mis muchachos estaban allí para impulsarme.”
+
+												-Jin</p>
 										</div>
 									</a>
 								</article>
@@ -85,7 +89,9 @@
 									<a href="Yoongi.html">
 										<h2>Min Yoongi</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>"Naciste para ser Real, no perfecta."
+
+												-Suga</p>
 										</div>
 									</a>
 								</article>
@@ -96,7 +102,7 @@
 									<a href="Hobi.html">
 										<h2>Jung Hoseok</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Esta es mi propia alegría y los aplausos son mi mundo. " -J-Hope</p>
 										</div>
 									</a>
 								</article>
@@ -107,7 +113,9 @@
 									<a href="Jimin.html">
 										<h2>Park Jimin</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>" Nunca renuncies a un sueño que has estado siguiendo toda tu vida.”
+
+												-Jimin</p>
 										</div>
 									</a>
 								</article>
@@ -118,7 +126,7 @@
 									<a href="Tae.html">
 										<h2>Kim Taehyung</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>"Ser raro es lo mejor que me pudo pasar." -Tae</p>
 										</div>
 									</a>
 								</article>
@@ -129,7 +137,9 @@
 									<a href="Jk.html">
 										<h2>Jeon Jungkook</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>“Nos reímos juntos y lloramos juntos. Esas sencillas emociones. Lo fueron todo para mí”
+
+												-JK</p>
 										</div>
 									</a>
 								</article>
@@ -140,7 +150,7 @@
 									<a href="BTS.html">
 										<h2>BTS</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>«La felicidad no es algo que tengas que conseguir. Puedes seguir sintiéndote feliz durante el proceso de lograr algo.»  -BTS</p>
 										</div>
 									</a>
 								<!-- </article>
@@ -196,25 +206,6 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -228,7 +219,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser</li></li>
 							</ul>
 						</div>
 					</footer>
