--- a/Hobi.html
+++ b/Hobi.html
@@ -52,34 +52,17 @@
 						<div class="inner">
 							<h1>Jung Hoseok</h1>
 							<span class="image main"><img src="images/hobipage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>DJ-Hope (정호석 / Jung Ho Seok), nació el 18 de febrero de 1994 en Gwangju, Corea del sur. Es uno de los miembros de BTS, es el bailarín principal, además de coreografo, sin embargo también participa en el desarrollo musical del grupo, aunque en menor medida que sus compañeros Rap Monster y Suga, es el tercer miembro de la "Rap Line" junto con los dos miembros mencionados antes.</p>
+							<p>Antes de ingresar a Big Hit y luego a BTS, Jung Hoseok era un bailarín callejero bajo el nombre de "SmileHoya". Sin embargo mas adelante perfeccionaría su estilo de baile en la "Seungri's Dance Academy". En su época de bailarín callejero, participó en dos grupos de baile: "GO Arts" y "NEURON", donde ganaría diversos premios junto a sus compañeros.
+
+								J-Hope audicionaría para JYP Entertainment pero no seria aceptado, aunque luego ingresaría a Big Hit.</p>
+							<p>Dentro del grupo, J-Hope es reconocido por ser alegre y eufórico, según Rap Monster, él junto a Jin, ayudan a arreglar el ambiente cuando esta tenso, nervioso o descompuesto debido a su personalidad alegre y positiva, además de hacer "aegyo" solo cuando esta en cámara, J-Hope demuestra no tener pudor de expresar sus sentimientos alegres con su cuerpo o sus acciones.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +77,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
