--- a/Jimin.html
+++ b/Jimin.html
@@ -52,34 +52,17 @@
 						<div class="inner">
 							<h1>Park Jimin</h1>
 							<span class="image main"><img src="images/jiminpage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Jimin (박지민 / Park Ji min) Es uno de los primeros vocalistas en ser revelados en BTS junto con Jin, jimin es el cantante que destaca por sus notas altas y armonía entre las partes de otros miembros. También es parte de la Dance Line, donde resalta por sus movimientos rápidos y baile contemporáneo.</p>
+							<p>Jimin debuta junto a las demás integrantes de BTS el 13 de Junio de 2013 con la canción ‘‘No More Dream’’ en el show musical M!Countdown. El grupo a pesar de su poco tiempo de haber debutado ganaron en múltiples premiaciones en la categoría Mejor Artista Nuevo del año, como Melon Music Awards, Golden Disk Awards, Seoul Music Awards, Gaon Chart K-Pop Awards, POPASIA Awards, SOMPI Awards, entre otras.
+								Jimin debutó cuando tenía 17 años a nivel internacional y 19 años en Corea del Sur..</p>
+							<p>Como artista ha recibido tres premios nacionales: en 2018 recibió la Orden al Mérito Cultural en los Korean Popular Culture & Arts Awards, entregada por el Presidente de Corea del Sur. En 2019 recibió una placa de apreciación por su baile con abanicos en los MMA 2018 , llamado “bunchaechum”, por promover de manera significativa y con impacto la cultura coreana, y el premio Van Fleet en 2020 por mejorar las relaciones entre Estados Unidos y Corea del Sur.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
+							
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +77,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
