--- a/Jk.html
+++ b/Jk.html
@@ -52,34 +52,17 @@
 						<div class="inner">
 							<h1>Jeon Jungkook</h1>
 							<span class="image main"><img src="images/jkpage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Jungkook (전정국 / Jeon Jung Kook) Es el miembro mas joven de BTS, el vocalista principal aunque en su single debut 2 COOL 4 SKOOL y su siguiente álbum O!RUL8,2? también rapeaba, sin embargo con el tiempo dejo de participar en rapeo o en menor medida. Por último es miembro de la Dance Line junto a Jimin y J-Hope.</p>
+							<p>Se unió a Big hit en 2011 cuando tenía 13 años, luego de audicionar para "Superstar K3". Aunque fue eliminado en la primera ronda, fue contactado por 8 empresas entre las que destacan JYP entertainment, Cube entertainment y FNC entertainment. Al final se decidió por firmar con BigHit entertainment a pesar de ser en ese tiempo una empresa pequeña.
+
+								Antes de debutar iba a tener el nombre artístico Seagull o Young Gun, pero al final decidieron utilizar su nombre real.</p>
+							<p>Jungkook es uno de los miembros de BTS con mayor humildad y timidez que los demás. Esto, por supuesto, no implica que tenga la disposición de conversar o compartir ideas cuando se lo piden. Jungkook, además, es leal y siempre trabaja duro para darlo todo a sus seguidores, como la vez que, en el día de su cumpleaños, compuso una canción con la letra de ARMY.</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +77,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
