--- a/Nam.html
+++ b/Nam.html
@@ -52,16 +52,20 @@
 						<div class="inner">
 							<h1>Kim NamJoom</h1>
 							<span class="image main"><img src="images/nampage.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Kim Nam-joon  (김남준) más conocido como RM (Real Me), es el líder de BTS, es un rapero, productor y compositor que ingresó a Big Hit antes que los demás miembros, y según sus compañeros, algunos ingresaron por que RM estaba en esa agencia. En un inicio, Big Hit tenia planeado debutar a BTS como un grupo de 3 raperos donde también estaba RM en él, sin embargo los planes cambiaron a un grupo de 7 miembros, famoso además, por su aporte en la escritura de letras y la producción en la discografía del grupo.</p>
+							<p>Ingresó a Big Hit en 2010, con tan solo 16 años, siendo así el miembro que más tiempo lleva en la agencia. Entrenó durante 3 años con su compañero rapero Min Yoon-gi y el bailarín Jung Ho-Seok, ahora conocidos como Suga y J-Hope.
+
+								Trabajó como compositor para el grupo de K-pop GLAM en una canción pro LGBTQ: ¨Party (XXO)¨ Billboard mencionó que fue la canción más positiva y con mayor visión del futuro de la última década.
+								
+								El 13 de Junio de 2013, RM debutó con BTS, y desde ese momento, ha producido y escrito varias canciones de los álbumes de BTS. El 29 de Agosto de 2013, realizó la intro del EP ¨O!RUL8,2?¨, que fue lanzado como un trailer del EP el 11 de septiembre y marcó así su primer solo lanzado colectivamente como ¨BTS¨</p>
+							<p>RM, durante su carrera dentro y fuera de BTS ha demostrado mediante sus canciones, su descontento con la sociedad coreana actual, demostrando lo informado y culto que es en cuanto a actualidad tanto de su país como de el extranjero. Dice ser una persona desordenada, que gusta de vivir la vida al máximo, sin embargo faceta melancólica e introspectiva también es perceptible en su música, en canciones como "Always" o "Reflection"..</p>
 						</div>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -79,7 +83,7 @@
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -94,7 +98,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
